Fix title text visibility for responsive menus.
git-svn-id: http://plugins.svn.wordpress.org/menu-image/trunk@1160851 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/menu-image.css
+++ b/menu-image.css
@@ -37,3 +37,6 @@
     padding-bottom: 10px;
     margin: 0 auto;
 }
+.menu-item a.menu-image-title-hide .menu-image-title {
+	display: none;
+}
